modules/security_groups/ha_sg_bastion.tf
resource "aws_security_group" "ha_wp_bastion" {
  name   = "ha_wp_bastion"
  vpc_id = var.vpc_id

  ingress {
    description = "SSH from VPC"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "ha_wp_bastion"
  }
}
